# HW3

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
lib/include/: logger.h  matrix.h  multiplicator.h  multiplier.h  print.h
lib/src/: logger.cpp  matrix.cpp  multiplicator.cpp  multiplier.cpp  print.cpp
